# Nueral-Network-From-Scratch-And_Obesity_Risk_pred

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  cliff.toml  pyproject.toml  requirements-dev.txt  requirements-notebooks.txt
.specify/memory/: constitution.md
.specify/setup/: README.md
.specify/templates/: feature-spec-template.md  plan-template.md  spec-template.md  tasks-template.md
notebooks/: neural_network_from_scratch.ipynb
specs/swecha-submission-compliance/: plan.md  spec.md  tasks.md
submission_artifacts/: __init__.py  metadata.py
tests/: test_submission_artifacts.py
