[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swecha-neural-network-submission"
version = "0.1.0"
description = "Swecha-ready submission packaging for a neural network from scratch notebook."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Kamal Kumar Manchenella" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "black==26.3.1",
  "mypy==1.11.2",
  "nbformat==5.10.4",
  "nbqa==1.9.0",
  "pip-audit==2.7.3",
  "pytest==9.0.3",
  "pytest-cov==5.0.0",
  "ruff==0.6.9",
  "vulture==2.11",
]

[tool.setuptools.packages.find]
include = ["submission_artifacts*"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=submission_artifacts --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
branch = true
source = ["submission_artifacts"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["submission_artifacts"]
